Make Jest tests work

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+		"test": "jest"
   },
-  "type": "module",
   "dependencies": {
     "pixi.js": "^7.0.3"
   },
