--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-		"test": "jest"
+    "test": "jest"
   },
   "dependencies": {
+    "jest-canvas-mock": "^2.5.2",
     "pixi.js": "^7.0.3"
   },
   "devDependencies": {
