--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "jest-canvas-mock": "^2.5.2",
     "pixi.js": "^7.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.2",
-    "jest": "^29.3.0",
-    "ts-jest": "^29.0.3",
+		"jest-electron": "^0.1.12",
+    "jest-extended": "^1.2.1",
+    "jest-raw-loader": "^1.0.1",
+    "@types/jest": "^26.0.0",
+    "jest": "^26.0.0",
+    "ts-jest": "^26.0.0",
     "typescript": "^4.8.4",
     "vite": "^3.2.3"
   }
